--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
   "Auth": {
-    "MongoURI": "mongodb+srv://admin:admin@xk4t4n4.pwfob.mongodb.net/xk4t4n4?retryWrites=true&w=majority",
-    "Password": "admin"
+    "MongoURI": "mongodb+srv://URL",
+    "Password": "Admin"
   }
 }
